# line_chat

./: .gitignore  README.md  staserver.sh
doc/: docker-compose.yml  dockerfile  main.cc
prev_code/brpc/: client.cc  main.proto  makefile  server.cc
prev_code/cmake/: CMakeLists.txt
prev_code/common/: channel.hpp  dms.hpp  elasticsearch.hpp  etcd.hpp  logger.hpp  rabbitmq.hpp
prev_code/dms/: test.cc
prev_code/es/: main.cc  makefile
prev_code/es/test/: main.cc  makefile
prev_code/etcd/: get.cc  makefile  put.cc
prev_code/example/asr/: makefile  test.cc
prev_code/example/dms/: test.cc
prev_code/example/rabbitmq/: consume.cc  makefile  publish.cc
prev_code/example/rpc/: discovery.cc  makefile  registry.cc
prev_code/gflags/: main.cc  main.conf  makefile
prev_code/gtest/: main.cc  makefile
prev_code/httplib/: main.cc  makefile
prev_code/json/: main.cc  makefile
prev_code/mq/: consume.cc  makefile  publish.cc
prev_code/odb/: CMakeLists.txt
prev_code/odb/test1/: main.cc  makefile  person-odb.hxx  person.hxx  person.sql
prev_code/odb/test2/: CMakeLists.txt
prev_code/odb/test2/entity/: student.hxx
prev_code/odb/test2/source/: main.cc
prev_code/redis++/: main.cc  makefile
prev_code/spdlog/: async.cc  logger.hpp  main.cc  makefile  sync.cc
prev_code/speech/: makefile  test.cc
prev_code/websocketpp/: main.cc  makefile
server/: CMakeLists.txt  depends.sh  docker-compose.yml  entrypoint.sh
server/common/: asr.hpp  channel.hpp  data_es.hpp  data_redis.hpp  dms.hpp  elasticsearch.hpp  etcd.hpp  logger.hpp  mysql.hpp  mysql_apply.hpp  mysql_chat_session.hpp  mysql_chat_session_member.hpp  mysql_message.hpp  mysql_relation.hpp  mysql_user.hpp  rabbitmq.hpp  utils.hpp
server/conf/: file_server.conf  friend_server.conf  gateway_server.conf  message_server.conf  speech_server.conf  transmit_server.conf  user_server.conf
server/file/: CMakeLists.txt  dockerfile
server/file/depends/: libjsoncpp.so.19
server/file/source/: file_server.cc  file_server.hpp
server/file/test/: file_client.cc
server/friend/: CMakeLists.txt  dockerfile
server/friend/depends/: libcpprest.so.2.10
server/friend/source/: friend_server.cc  friend_server.hpp
server/friend/test/: friend.client.cc
server/friend/test/mysql_test/: chat_session-odb.cxx  chat_session-odb.hxx  chat_session-odb.ixx  chat_session.sql  chat_session_member-odb.cxx  chat_session_member-odb.hxx  chat_session_member-odb.ixx  friend_apply-odb.cxx  friend_apply-odb.hxx  friend_apply-odb.ixx  friend_apply.sql  main  main.cc  makefile  relation-odb.cxx  relation-odb.hxx  relation-odb.ixx  relation.sql
server/gateway/: CMakeLists.txt  dockerfile
server/gateway/source/: connection.hpp  gateway_server.cc  gateway_server.hpp
server/message/: CMakeLists.txt  dockerfile
server/message/depends/: libcpr.so.1  libleveldb.so.1d
server/message/source/: message_server.cc  message_server.hpp
server/message/test/: message_client.cc
server/message/test/es_test/: main.cc  makefile
server/message/test/mysql_test/: main.cc  makefile
server/odb/: chat_session.hxx  chat_session_member.hxx  friend_apply.hxx  message.hxx  relation.hxx  user.hxx
server/proto/: base.proto  file.proto  friend.proto  gateway.proto  message.proto  notify.proto  speech.proto  transmit.proto  user.proto
server/speech/: CMakeLists.txt  dockerfile
server/speech/source/: speech_server.cc  speech_server.hpp
server/speech/test/: speech_client.cc
server/sql/: chat_session.sql  chat_session_member.sql  friend_apply.sql  message.sql  relation.sql  user.sql
server/transmit/: CMakeLists.txt  dockerfile
server/transmit/source/: transmit_server.cc  transmit_server.hpp
server/transmit/test/: transmit.cc
server/transmit/test/mysqltest/: main.cc  makefile
server/user/: CMakeLists.txt  dockerfile
server/user/depends/: libelasticlient.so.2  libredis++.so.1
server/user/source/: user_server.cc  user_server.hpp
server/user/test/: user_client.cc
server/user/test/es_test/: main.cc  test
server/user/test/mysql_test/: main.cc  makefile  test  user-odb.cxx  user-odb.hxx  user-odb.ixx
server/user/test/redis_test/: main.cc  test
